<resources>
    <string name="app_name">머지엄</string>

    <string name="google_api">AIzaSyDdvjCwD6bVOuen70AwDxAV2rQrS-rbXBY</string>
    <string name="google_web_api">674402390137-u4hl8731icoc2dur0se20bvt2vsl6rga.apps.googleusercontent.com</string>
    <string name="kakao_app_key">9f10b53292402f572c6933ec02762d8a</string>
    <string name="kakao_secret_key">DRverf7i0wj7xqNfGr55miAAzGWdSUZo</string>
    <string name="naver_client_id">zp_U6QNm3sWr4V1O7Xa5</string>
    <string name="naver_client_secret">wCzTb1divC</string>

    <string name="str_done">완료</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="navigation_home">홈</string>
    <string name="navigation_interested_museum">관심 박물관</string>
    <string name="navigation_setting">설정</string>
    <string name="navigation_logout">로그아웃</string>
    <string name="all_time_exhibit">상설전시</string>
    <string name="detail_info_label">박물관 정보</string>
    <string name="detail_address_label">장소</string>
    <string name="detail_business_hour_label">시간</string>
    <string name="detail_day_off_label">휴관</string>
    <string name="detail_fee_label">가격</string>
    <string name="detail_tel_label">문의</string>
    <string name="detail_homepage_label">홈페이지</string>
    <string name="detail_favorite_label">찜</string>
    <string name="detail_stamp_label">스탬프</string>
    <string name="detail_intro_label">소개</string>
    <string name="detail_review_label">리뷰</string>
    <string name="detail_map_label">지도 정보</string>
    <string name="home_popular">인기 박물관</string>
    <string name="home_history">역사깊은 박물관</string>
    <string name="home_nearby">주변 박물관 찾아보기</string>
    <string name="home_tasting">박물관 맛보기</string>
    <string name="navigation_nickname">%s님</string>
    <string name="hint_search">검색</string>
    <string name="search_log_nothing_data">최근 검색 기록이 없습니다.</string>
    <string name="review_all">전체 리뷰</string>
    <string name="review_write">리뷰 작성하기</string>
    <string name="info_message">일시적인 오류가 발생했습니다.</string>
    <string name="review_submit">제출</string>
    <string name="hint_review">의견 남기기</string>
    <string name="detail_found_date_label">설립일자</string>
    <string name="nothing_review">작성된 리뷰가 없습니다.</string>
    <string name="nothing_data">데이터가 없습니다.</string>
    <string name="navigation_all_museum">전체 보기</string>
    <string name="fresco_page" formatted="false">(%d / %d)</string>
    <string name="fail_connection">서버 연결에 실패했습니다.</string>
    <string name="navigation_registered_date_label">가입일자: </string>
    <string name="navigation_stamp_label">스탬프 갯수: </string>
    <string name="navigation_favorite_label">찜목록 갯수: </string>
    <string name="home_area">규모가 큰 박물관</string>
    <string name="order_by_popular">인기 순</string>
    <string name="order_by_history">설립일자 순</string>
    <string name="order_by_area">규모 순</string>
    <string name="navigation_intro">환영합니다!</string>
    <string name="navigation_close_account">회원 탈퇴</string>

</resources>
