<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_home" />

        <item
            android:id="@+id/navigation_all_museum"
            android:checkable="false"
            android:icon="@drawable/ic_all_museum"
            android:title="@string/navigation_all_museum" />

        <item
            android:id="@+id/navigation_interested_museum"
            android:checkable="false"
            android:icon="@drawable/ic_interested_museum"
            android:title="@string/navigation_interested_museum" />
    </group>

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/navigation_logout" />

    <item
        android:title="" />
    <item
        android:title="" />
    <item
        android:title="" />

    <item
        android:id="@+id/navigation_close_account"
        android:icon="@drawable/ic_close_account"
        android:title="@string/navigation_close_account" />
</menu>