<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/textview_review_all_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/review_all"
        android:textSize="@dimen/big_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_line"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:id="@+id/edittext_review_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="85"
            android:background="@android:color/transparent"
            android:hint="@string/hint_review"
            android:inputType="textShortMessage"
            android:maxLength="30"
            android:maxLines="2"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="15"
            android:background="@drawable/ripple_button_click"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/review_submit"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="LinearLayoutManager" />

</LinearLayout>