<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_detail_toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include_detail_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageview_detail_thumb"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/textview_detail_exhibition_group"
                android:layout_width="100dp"
                android:layout_height="24dp"
                android:layout_below="@id/imageview_detail_thumb"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/all_time_exhibit"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textview_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_detail_exhibition_group"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/great_text_size"
                android:textStyle="bold"
                tools:text="석장리 박물관" />

            <View
                android:id="@+id/detail_next_line1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/textview_detail_name"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/lineColor" />

            <TextView
                android:id="@+id/textview_detail_info_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_name"
                android:layout_alignStart="@id/textview_detail_name"
                android:layout_below="@id/detail_next_line1"
                android:text="@string/detail_info_label"
                android:textSize="@dimen/big_text_size" />

            <TextView
                android:id="@+id/textview_detail_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_detail_info_label"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/detail_address_label" />

            <TextView
                android:id="@+id/textview_detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/textview_detail_address_label"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_toEndOf="@id/textview_detail_address_label"
                android:layout_toRightOf="@id/textview_detail_address_label"
                tools:text="충청남도 공주시 금벽로 990" />

            <TextView
                android:id="@+id/textview_detail_business_hour_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address_label"
                android:layout_alignStart="@id/textview_detail_address_label"
                android:layout_below="@id/textview_detail_address"
                android:layout_marginTop="8dp"
                android:text="@string/detail_business_hour_label" />

            <TextView
                android:id="@+id/textview_detail_business_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address"
                android:layout_alignStart="@id/textview_detail_address"
                android:layout_alignTop="@id/textview_detail_business_hour_label"
                tools:text="09:00 ~ 18:00" />

            <TextView
                android:id="@+id/textview_detail_day_off_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address_label"
                android:layout_alignStart="@id/textview_detail_address_label"
                android:layout_below="@id/textview_detail_business_hour"
                android:layout_marginTop="8dp"
                android:text="@string/detail_day_off_label" />

            <TextView
                android:id="@+id/textview_detail_day_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address"
                android:layout_alignStart="@id/textview_detail_address"
                android:layout_alignTop="@id/textview_detail_day_off_label"
                tools:text="1월 1일, 설, 추석" />

            <TextView
                android:id="@+id/textview_detail_fee_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address_label"
                android:layout_alignStart="@id/textview_detail_address_label"
                android:layout_below="@id/textview_detail_day_off"
                android:layout_marginTop="8dp"
                android:text="@string/detail_fee_label" />

            <TextView
                android:id="@+id/textview_detail_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address"
                android:layout_alignStart="@id/textview_detail_address"
                android:layout_alignTop="@id/textview_detail_fee_label"
                tools:text="성인: 1300, 청소년: 800, 어린이: 600" />

            <TextView
                android:id="@+id/textview_detail_tel_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address_label"
                android:layout_alignStart="@id/textview_detail_address_label"
                android:layout_below="@id/textview_detail_fee"
                android:layout_marginTop="8dp"
                android:text="@string/detail_tel_label" />

            <TextView
                android:id="@+id/textview_detail_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address"
                android:layout_alignStart="@id/textview_detail_address"
                android:layout_alignTop="@id/textview_detail_tel_label"
                tools:text="041-840-8924" />


            <TextView
                android:id="@+id/textview_detail_homepage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address_label"
                android:layout_alignStart="@id/textview_detail_address_label"
                android:layout_below="@id/textview_detail_tel"
                android:layout_marginTop="8dp"
                android:text="@string/detail_homepage_label" />

            <TextView
                android:id="@+id/textview_detail_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address"
                android:layout_alignStart="@id/textview_detail_address"
                android:layout_alignTop="@id/textview_detail_homepage_label"
                tools:text="http://sjnmuseum.go.kr" />

            <TextView
                android:id="@+id/textview_detail_found_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address_label"
                android:layout_alignStart="@id/textview_detail_address_label"
                android:layout_below="@id/textview_detail_homepage"
                android:layout_marginTop="8dp"
                android:text="@string/detail_found_date_label" />

            <TextView
                android:id="@+id/textview_detail_found_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address"
                android:layout_alignStart="@id/textview_detail_address"
                android:layout_alignTop="@id/textview_detail_found_date_label"
                tools:text="1999-04-03" />

            <View
                android:id="@+id/detail_next_line2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/textview_detail_found_date"
                android:layout_marginTop="16dp"
                android:background="@color/lineColor" />

            <View
                android:id="@+id/detail_divider"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_below="@id/detail_next_line2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp" />

            <RelativeLayout
                android:id="@+id/relativelayout_detail_favorite_container"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_next_line2"
                android:layout_toLeftOf="@id/detail_divider"
                android:layout_toStartOf="@id/detail_divider"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <CheckBox
                    android:id="@+id/checkbox_detail_favorite"
                    android:layout_width="40dp"
                    android:layout_height="32dp"
                    android:background="@drawable/selector_detail_favorite"
                    android:button="@android:color/transparent"
                    android:clickable="false" />

                <TextView
                    android:id="@+id/textview_detail_favorite_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/checkbox_detail_favorite"
                    android:layout_alignLeft="@id/checkbox_detail_favorite"
                    android:layout_alignRight="@id/checkbox_detail_favorite"
                    android:layout_alignStart="@id/checkbox_detail_favorite"
                    android:layout_below="@id/checkbox_detail_favorite"
                    android:gravity="center"
                    android:text="@string/detail_favorite_label"
                    android:textSize="@dimen/small_text_size" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativelayout_detail_stamp_container"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_next_line2"
                android:layout_toEndOf="@id/detail_divider"
                android:layout_toRightOf="@id/detail_divider"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <CheckBox
                    android:id="@+id/checkbox_detail_stamp"
                    android:layout_width="40dp"
                    android:layout_height="32dp"
                    android:background="@drawable/selector_detail_stamp"
                    android:button="@android:color/transparent"
                    android:clickable="false" />

                <TextView
                    android:id="@+id/textview_detail_stamp_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/checkbox_detail_stamp"
                    android:layout_alignLeft="@id/checkbox_detail_stamp"
                    android:layout_alignRight="@id/checkbox_detail_stamp"
                    android:layout_alignStart="@id/checkbox_detail_stamp"
                    android:layout_below="@id/checkbox_detail_stamp"
                    android:gravity="center"
                    android:text="@string/detail_stamp_label"
                    android:textSize="@dimen/small_text_size" />
            </RelativeLayout>

            <View
                android:id="@+id/detail_next_line3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/relativelayout_detail_stamp_container"
                android:layout_marginBottom="16dp"
                android:background="@color/lineColor" />

            <TextView
                android:id="@+id/textview_detail_intro_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_name"
                android:layout_alignStart="@id/textview_detail_name"
                android:layout_below="@id/detail_next_line3"
                android:text="@string/detail_intro_label"
                android:textSize="@dimen/big_text_size" />

            <TextView
                android:id="@+id/textview_detail_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_address_label"
                android:layout_alignStart="@id/textview_detail_address_label"
                android:layout_below="@id/textview_detail_intro_label"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:textSize="@dimen/normal_text_size"
                tools:text=" 한국 구석기 유적이 최초로 발견된 곳에 세워진 박물관으로 구석기시대의 정취를 한껏 느낄 수 있고 구석기와 관련된 다양한 교육체험프로그램 진행으로 가족단위의 관람객들이 방문하기에 최적의 장소입니다" />

            <View
                android:id="@+id/detail_next_line4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/textview_detail_intro"
                android:layout_marginTop="16dp"
                android:background="@color/lineColor" />

            <RelativeLayout
                android:id="@+id/relativelayout_detail_review_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_next_line4"
                android:background="@drawable/ripple_button_click"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textview_detail_review_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/detail_review_label"
                    android:textSize="@dimen/big_text_size" />

                <FrameLayout
                    android:id="@+id/framelayout_detail_review_content_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textview_detail_review_label"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/textview_detail_nothing_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/nothing_review"
                        android:textSize="@dimen/normal_text_size"
                        android:visibility="gone" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerview_detail_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="LinearLayoutManager" />

                </FrameLayout>

                <TextView
                    android:id="@+id/textview_detail_review_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/framelayout_detail_review_content_container"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/large_text_size" />

            </RelativeLayout>

            <View
                android:id="@+id/detail_next_line5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/relativelayout_detail_review_container"
                android:layout_marginBottom="16dp"
                android:background="@color/lineColor" />

            <TextView
                android:id="@+id/textview_detail_map_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textview_detail_name"
                android:layout_alignStart="@id/textview_detail_name"
                android:layout_below="@id/detail_next_line5"
                android:text="@string/detail_map_label"
                android:textSize="@dimen/big_text_size" />

            <com.nhn.android.maps.NMapView
                android:id="@+id/mapview_detail"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_below="@id/textview_detail_map_label"
                android:layout_margin="16dp" />

        </RelativeLayout>

    </ScrollView>

    <include layout="@layout/include_layout_fab" />

</RelativeLayout>