<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/imageview_navigation_meojium"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_museum"
        android:tint="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/imageview_navigation_meojium"
        android:layout_toRightOf="@id/imageview_navigation_meojium"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="84"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_navigation_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/large_text_size"
                tools:text="@string/navigation_nickname"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/large_text_size"
                android:text="@string/navigation_intro" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageview_navigation_change_nickname"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:layout_weight="16"
            android:background="@drawable/ripple_navigation_click"
            android:clickable="true"
            android:padding="4dp"
            android:src="@drawable/ic_change_nickname" />

    </LinearLayout>

    <TextView
        android:id="@+id/textview_navigation_registered_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/imageview_navigation_meojium"
        android:layout_alignStart="@id/imageview_navigation_meojium"
        android:layout_below="@id/imageview_navigation_meojium"
        android:layout_marginTop="16dp"
        android:text="@string/navigation_registered_date_label"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textview_navigation_registered_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textview_navigation_registered_date_label"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/textview_navigation_registered_date_label"
        android:layout_toRightOf="@id/textview_navigation_registered_date_label"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textview_navigation_favorite_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textview_navigation_registered_date_label"
        android:layout_alignStart="@id/textview_navigation_registered_date_label"
        android:layout_below="@id/textview_navigation_registered_date_label"
        android:layout_marginTop="8dp"
        android:text="@string/navigation_favorite_label"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textview_navigation_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textview_navigation_favorite_label"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/textview_navigation_favorite_label"
        android:layout_toRightOf="@id/textview_navigation_favorite_label"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textview_navigation_stamp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textview_navigation_registered_date_label"
        android:layout_alignStart="@id/textview_navigation_registered_date_label"
        android:layout_below="@id/textview_navigation_favorite_label"
        android:layout_marginTop="8dp"
        android:text="@string/navigation_stamp_label"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textview_navigation_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textview_navigation_stamp_label"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/textview_navigation_stamp_label"
        android:layout_toRightOf="@id/textview_navigation_stamp_label"
        android:textColor="@android:color/white" />

</RelativeLayout>